# chemestryDB

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  reseter.cpp
BackEnd/: Config.md  to_do.md
BackEnd/Api/: api.h  notes.h
BackEnd/DataBase/: data.h  notes.h  substance.h
BackEnd/Logic/: substance.h  test.cpp
FrontEnd/: main.html
FrontEnd/CSS/: mainCSS.css
FrontEnd/JS/: main.js
